<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E4C61"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:background="@drawable/spinner_history"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondNumber"
        />

    <TextView
        android:id="@+id/firstNumber"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="12pt"
        app:layout_constraintEnd_toStartOf="@id/secondNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondNumber"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="12pt"
        app:layout_constraintEnd_toStartOf="@id/result"
        app:layout_constraintStart_toEndOf="@id/firstNumber"
        app:layout_constraintTop_toTopOf="@id/firstNumber" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/secondNumber"
        app:layout_constraintTop_toTopOf="@id/secondNumber" />

    <TableLayout
        android:id="@+id/buttonTable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/transition"
        app:layout_constraintEnd_toStartOf="@id/transition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner">

        <TableRow android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:backgroundTintMode="add"
                android:shadowColor="@color/button_1"
                android:text="@string/seven"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:shadowColor="@color/black"
                android:text="@string/eight"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:shadowColor="@color/black"
                android:text="@string/nine"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/equals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:shadowColor="@color/black"
                android:text="@string/equals"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:shadowColor="@color/black"
                android:text="@string/four"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:shadowColor="@color/black"
                android:text="@string/five"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:shadowColor="@color/black"
                android:text="@string/six"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:shadowColor="@color/black"
                android:text="@string/plus"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:shadowColor="@color/black"
                android:text="@string/one"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:shadowColor="@color/black"
                android:text="@string/two"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:shadowColor="@color/black"
                android:text="@string/three"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:shadowColor="@color/black"
                android:text="@string/minus"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:shadowColor="@color/black"
                android:text="@string/clear"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:shadowColor="@color/black"
                android:text="@string/zero"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:shadowColor="@color/black"
                android:text="@string/multiply"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/divide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:shadowColor="@color/black"
                android:text="/"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/transition"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonTable">

        <TableRow android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/firstWindows"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/active_button"
                android:text="@string/simple"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/secondWindows"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/passive_button"
                android:shadowColor="@color/black"
                android:text="@string/difficult"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>